--- a/CoolingControl/CoolingControl.csproj
+++ b/CoolingControl/CoolingControl.csproj
@@ -4,8 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
     <RollForward>Major</RollForward>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Version>1.0.0.0</Version>
     <FileVersion>1.0.0.0</FileVersion>
@@ -13,7 +15,7 @@
     <Author>Peter Laszlo</Author>
     <ApplicationIcon>cooling_control.ico</ApplicationIcon>
     <AssemblyTitle>CoolingControl</AssemblyTitle>
-    <AssemblyName>CoolingControl</AssemblyName>    
+    <AssemblyName>CoolingControl</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -21,21 +23,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.5-pre407" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.5" />
     <PackageReference Include="NLua" Version="1.7.5" />
-    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
-<ItemGroup Condition="'$(Configuration)' == 'Release'">
+  <ItemGroup>
+    <ProjectReference Include="..\..\LibreHardwareMonitor\LibreHardwareMonitorLib\LibreHardwareMonitorLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
     <None Include="config/config.json" CopyToOutputDirectory="Always" Link="config/config.json" />
     <None Include="config/cooling_control.lua" CopyToOutputDirectory="Always" Link="config/cooling_control.lua" />
-</ItemGroup>
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="app.manifest" />
