--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,6 +46,8 @@
         "Release",
         "-f",
         "net8.0-windows",
+        "-r",
+        "win-x64",
         "--no-self-contained",
         "--output",
         "CoolingControl/publish"
@@ -54,6 +56,7 @@
         "kind": "build",
         "isDefault": false
       },
+      "dependsOn": ["Clean CoolingControl"],
       "problemMatcher": "$msCompile",
       "presentation": {
         "reveal": "always"
@@ -70,6 +73,8 @@
         "Release",
         "-f",
         "net9.0-windows",
+        "-r",
+        "win-x64",
         "--no-self-contained",
         "--output",
         "CoolingControl/publish"
@@ -78,6 +83,7 @@
         "kind": "build",
         "isDefault": false
       },
+      "dependsOn": ["Clean CoolingControl"],
       "problemMatcher": "$msCompile",
       "presentation": {
         "reveal": "always"
@@ -127,7 +133,9 @@
       "command": "dotnet",
       "args": [
         "clean",
-        "CoolingControl/CoolingControl.csproj"
+        "CoolingControl/CoolingControl.csproj",
+        "-c",
+        "Release"
       ],
       "group": {
         "kind": "build",
