--- a/CoolingControl/CoolingControl.csproj
+++ b/CoolingControl/CoolingControl.csproj
@@ -9,9 +9,9 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>1.0.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
-    <InformationalVersion>1.0.0.0</InformationalVersion>
+    <Version>1.1.0.0</Version>
+    <FileVersion>1.1.0.0</FileVersion>
+    <InformationalVersion>1.1.0.0</InformationalVersion>
     <Author>Peter Laszlo</Author>
     <ApplicationIcon>cooling_control.ico</ApplicationIcon>
     <AssemblyTitle>CoolingControl</AssemblyTitle>
@@ -23,6 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="KeraLua" Version="1.4.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.6" />
     <PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.6" />
