--- a/CoolingControl/CoolingControl.csproj
+++ b/CoolingControl/CoolingControl.csproj
@@ -2,16 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net10.0-windows</TargetFrameworks>
+    <PlatformTarget>x64</PlatformTarget>
     <RollForward>Major</RollForward>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>1.1.0.0</Version>
-    <FileVersion>1.1.0.0</FileVersion>
-    <InformationalVersion>1.1.0.0</InformationalVersion>
+    <Version>1.1.1.0</Version>
+    <FileVersion>1.1.1.0</FileVersion>
+    <InformationalVersion>1.1.1.0</InformationalVersion>
     <Author>Peter Laszlo</Author>
     <ApplicationIcon>cooling_control.ico</ApplicationIcon>
     <AssemblyTitle>CoolingControl</AssemblyTitle>
@@ -23,14 +24,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="KeraLua" Version="1.4.6" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.7" />
-    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.7" />
-    <PackageReference Include="NLua" Version="1.7.5" />
-    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="KeraLua" Version="1.4.9" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.13" />
+    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.13" />
+    <PackageReference Include="NLua" Version="1.7.8" />
+    <PackageReference Include="Serilog" Version="4.3.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
